Mobile: Fix social icons not visible
Add seperate section for social icons

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,7 +65,7 @@
     }
 
     .contact {
-        height: 80vh;
+        height: 85vh;
     }
 
     .social {
@@ -74,10 +74,11 @@
 
     .form {
         width: 80%;
+        height: 50%;
     }
 
     .social p{
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 
 }
