--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ a:active {
     color: #E9E9E9;
     text-align: center;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: #212121;
     transition: all 0.7s ease-in;
 }
@@ -426,6 +426,19 @@ button {
 
 button:hover {
     opacity: 0.7;
+}
+
+.socio {
+    height: 12vh;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 1.8rem;
+    color: #E9E9E9;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: #212121;
 }
 
 .social {
